fixed alignment and margins

--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -1,3 +1,10 @@
 h1 {
-    color: teal;
+  color: teal;
+}
+
+img {
+  border-radius: 10%;
+}
+form {
+  background-color: lightgrey;
 }
